[File] getBinaryFile added 1st impl
- WIP: fix dir related pb and get the binary
